[package]
name = "axum-msgpack"
version = "0.2.2"
edition = "2021"
description = "serialize/derserialize msgpack for axum"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.0"
hyper = "0.14"
mime = "0.3.16"

[dev-dependencies]
tokio = { version = "~1.17", features = ["full"]}
