[package]
name = "axum-msgpack"
version = "0.3.0"
edition = "2021"
description = "serialize/derserialize msgpack for axum"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
hyper = "0.14"
mime = "0.3"

[dev-dependencies]
tokio = { version = "1.22", features = ["full"]}
