[package]
name = "axum-msgpack"
version = "0.4.0"
edition = "2021"
description = "serialize/derserialize msgpack for axum"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", default-features = false }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
hyper = "1.1"
mime = "0.3"

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7" }
